--- a/templates/index.html
+++ b/templates/index.html
@@ -196,7 +196,7 @@
 
             <div class="text-center mt-4">
                 <button type="submit" class="btn btn-success px-5 py-2 shadow">
-                    <i class="fas fa-seedling me-2"></i>Predict Crop
+                    <i class="fas fa-seedling me-2"></i>Recommend Crop
                   </button>                  
             </div>
           </form>
